--- a/views/index.html
+++ b/views/index.html
@@ -26,16 +26,9 @@
     </header>
 
     <main>
-      <p class="bold">Oh hi,</p>
-      <p>Tell me your hopes and dreams:</p>
-      <form>
-        <input type="text" maxlength="100" placeholder="Dreams!">
-        <button type="submit">Submit</button>
-      </form>
-      <section class="dreams">
-        <ul id="dreams">
-        </ul>
-      </section>
+   <button class="flick">
+     click
+      </button>
     </main>
 
     <footer>
@@ -49,6 +42,6 @@
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
     <script src="/client.js"></script>
-
+    <script src="cool-file.js"></script>
   </body>
 </html>
