--- a/public/style.css
+++ b/public/style.css
@@ -4,4 +4,11 @@ footer {
   padding-top: 25px;
   border-top: 1px solid lightgrey;
 }
+footer a{
+  text-decoration: none;
+}
+
+footer a:hover{
+  text-decoration: underline;
+}
 
