--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Glitch!</title>
+    <title>Welcome</title>
     <meta name="description" content="A cool thing made with Glitch">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -12,10 +12,11 @@
   </head>
   <body>
     <header>
+      <h3>sörç</h3>
     </header>
 
     <main>
-      
+      <input class="search" type="search" name="search">
     </main>
 
     <footer>
