--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,11 @@
+.search{
+  margin: auto;
+  width: 20%;
+  opacity: 0.8;
+}
 
 footer {
+  margin: auto;
   margin-top: 50px;
   padding-top: 25px;
   border-top: 1px solid lightgrey;
