--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,29 @@
-.search{
-  margin: auto;
+h3{
   width: 20%;
+  margin: auto;
+  margin-top: 20%;
+  display: block;
   opacity: 0.8;
 }
 
-footer {
+.search {
+  width: 20%;
   margin: auto;
-  margin-top: 50px;
-  padding-top: 25px;
+  display: block;
+  opacity: 0.8;
+  height: 20px;
+}
+
+footer {
+  width: 20%;
+  display: block;
+  margin: auto;
+  margin-top: 2%;
+  font-size: 0.8em;
+  text-align: center;
   border-top: 1px solid lightgrey;
 }
+
 footer a{
   text-decoration: none;
 }
