--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,12 @@
-h3{
+
+.search {
   width: 20%;
   margin: auto;
   margin-top: 20%;
   display: block;
   opacity: 0.8;
-}
-
-.search {
-  width: 20%;
-  margin: auto;
-  display: block;
-  opacity: 0.8;
-  height: 20px;
+  height: 30px;
+  padding-left: 10px; 
 }
 
 footer {
@@ -25,10 +20,17 @@ footer {
 }
 
 footer a{
+  color: black;
   text-decoration: none;
 }
 
 footer a:hover{
+  color: black;
+  text-decoration: underline;
+}
+
+footer a:active{
+  color: black;
   text-decoration: underline;
 }
 
