--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,9 @@
     </header>
 
     <main>
-      <input class="search" type="search" name="search">
+      <form method="get">
+        <input class="search" type="search" name="search">
+      </form>
     </main>
 
     <footer>
