📈🐾 Checkpoint ./views/index.pug:365129/1275 ./views/cool-file.js:365129/1148

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,15 @@
 doctype html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
 html
   head
-    title title
-    link(id="favicon", rel="icon", href="https://glitch.com/edit/favicon-app.ico", type="image/x-icon")
-    meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(rel="stylesheet", href="/style.css")
+    title= title
+  link(id="favicon", rel="icon", href="https://glitch.com/edit/favicon-app.ico", type="image/x-icon")
+  meta(charset="utf-8")
+  meta(name="viewport", content="width=device-width, initial-scale=1")
+  link(rel="stylesheet", href="/style.css")
   body
     main
       form(method="get")
-        input(class="search", type="search", name="search")   
+        input(class="search", type="search", name="search")
     footer
       a(href="https://glitch.com") Remix this in Glitch
     script(src="https://code.jquery.com/jquery-2.2.1.min.js",
