⚓️💀 Checkpoint ./server.js:365129/338 ./views/index.pug:365129/17

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ html
   link(rel="stylesheet", href="/style.css")
   body
     main
+      p= message
       form(method="get")
         input(class="search", type="search", name="search")
     footer
