👽👦 Checkpoint ./views/index.pug:365129/166 ./server.js:365129/103

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,14 +1,15 @@
 doctype html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
 html
   head
-    title= title
+    title= data.title 
   link(id="favicon", rel="icon", href="https://glitch.com/edit/favicon-app.ico", type="image/x-icon")
   meta(charset="utf-8")
   meta(name="viewport", content="width=device-width, initial-scale=1")
   link(rel="stylesheet", href="/style.css")
   body
     main
-      p= message
+    if data.isSe   
+      p= data.key
       form(method="get")
         input(class="search", type="search", name="search")
     footer
