--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,7 @@ html
         input(class="search", type="search", name="search")
     footer
       a(href="https://glitch.com") Remix this in Glitch
+    script(src="/controllers/ajax.js")
     script(src="https://code.jquery.com/jquery-2.2.1.min.js",
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=",
             crossorigin="anonymous")
