🗽🚐 Checkpoint ./server.js:365129/95 ./views/index.pug:365129/87 ./models/parser.js:365129/29

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,8 @@ html
   body
     main
     if data.isSearched
-      div.result= data.content
+      if data.content.dataId
+        div.result= data.content.pageCounter
     else
       form(method="get")
         input(class="search", type="search", name="search")
