--- a/views/index.pug
+++ b/views/index.pug
@@ -18,6 +18,4 @@ html
     footer
       a(href="https://glitch.com") Remix this in Glitch
     script(src="/controllers/ajax.js")
-    script(src="https://code.jquery.com/jquery-2.2.1.min.js",
-            integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=",
-            crossorigin="anonymous")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
