--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,8 @@ html
   meta(charset="utf-8")
   meta(name="viewport", content="width=device-width, initial-scale=1")
   link(rel="stylesheet", href="/style.css")
+  script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js", type="text/javascript")
+  script(src="/controllers/ajax.js")
   body
     main
     if data.isSearched
@@ -17,5 +19,3 @@ html
         input(class="search", type="search", name="search")
     footer
       a(href="https://glitch.com") Remix this in Glitch
-    script(src="/controllers/ajax.js")
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
