🎪💀 Checkpoint ./server.js:365129/98 ./views/index.pug:365129/63 ./controllers/ajax.js:365129/104

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,7 @@ html
       if data.content.dataId
         div.result= data.content.pageCounter + ' pages'
           span(class='continue', data-pagecounter=data.content.pageCounter, data-title=data.content.dataTitle, data-id=data.content.dataId)  countinue?
+          span(class='mainpage') mainpage?
     else
       form(method="get")
         input(class="search", type="search", name="search")
