--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ html
   link(rel="stylesheet", href="/style.css")
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js", type="text/javascript")
   script(src="/controllers/ajax.js")
+  script(src="/controllers/socket.io.js")
   body
     main
     if data.isSearched
