--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,12 @@ html
   link(rel="stylesheet", href="/style.css")
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js", type="text/javascript")
   script(src="/controllers/ajax.js")
-  script(src="/controllers/socket.io.js")
+  script(src="/socket.io/socket.io.js")
+  script
+    'var socket = io.connect('http://localhost:8080');'
+    socket.on('connect', function(data) {
+        socket.emit('join', 'Hello World from client');
+    });
   body
     main
     if data.isSearched
