--- a/views/index.pug
+++ b/views/index.pug
@@ -9,11 +9,9 @@ html
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js", type="text/javascript")
   script(src="/controllers/ajax.js")
   script(src="/socket.io/socket.io.js")
+  script(src="/controllers/socket.io.js")
   script.
-      var socket = io.connect('https://entri-fetch.glitch.me/');
-      socket.on('connect', function(data) {
-        socket.emit('join', 'Hello World from client');
-      });
+      
   body
     main
     if data.isSearched
