--- a/views/index.pug
+++ b/views/index.pug
@@ -7,17 +7,7 @@ html
   meta(name="viewport", content="width=device-width, initial-scale=1")
   link(rel="stylesheet", href="/style.css")
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js", type="text/javascript")
-  script(src="/controllers/ajax.js")
-  script(src="/socket.io/socket.io.js")
-  script(src="/controllers/socket.io.js")
-  script.
-      var socket = io.connect('https://entri-fetch.glitch.me/');
-      socket.on('connect', function(data) {
-        socket.emit('join', 'Hello World from client');
-        socket.on('messages', function(datas) {
-          console.log(datas);
-        });
-      });
+  script(src="/controllers/ajax.js", type="text/javascript")
   body
     main
     if data.isSearched
