⚓️👗 Checkpoint ./server.js:365129/113 ./views/index.pug:365129/56

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,5 +23,6 @@ html
     else
       form(method="get")
         input(class="search", type="search", name="search")
+      div(class='')
     footer
       a(href="https://glitch.com") Remix this in Glitch
