--- a/views/index.pug
+++ b/views/index.pug
@@ -12,14 +12,21 @@ html
     main
     if data.isSearched
       if data.content
-        if data.content.pageCounter
-          div.data= data.content.pageCounter + ' pages'
-            span(class='continue', data-pagecounter=data.content.pageCounter, data-title=data.content.dataTitle, data-id=data.content.dataId)  countinue?
-            span(class='mainpage')  mainpage?
+        if data.title != 'Error'
+          if data.content.pageCounter
+            div.data= data.content.pageCounter + ' pages'
+              span(class='continue', data-pagecounter=data.content.pageCounter, data-title=data.content.dataTitle, data-id=data.content.dataId)  countinue?
+              span(class='mainpage')  mainpage?
+          else
+            div.data= '1 page'
+              span(class='continue', data-pagecounter=0, data-title=data.content.dataTitle, data-id=data.content.dataId)  countinue?
+              span(class='mainpage')  mainpage?
         else
-          div.data= '1 page'
-            span(class='continue', data-pagecounter=0, data-title=data.content.dataTitle, data-id=data.content.dataId)  countinue?
+          div.err= data.content
             span(class='mainpage')  mainpage?
+      else
+        div.return= 'no title'
+          span(class='mainpage')  mainpage?
     else
       form(method="get")
         input(class="search", type="search", name="search")
