🙈📷 Checkpoint ./server.js:365129/4 ./models/parser.js:365129/87 ./views/index.pug:365129/18

--- a/views/index.pug
+++ b/views/index.pug
@@ -25,7 +25,7 @@ html
           div.err= data.content
             span(class='mainpage')  mainpage?
       else
-        div.return= 'no title'
+        div.data= 'no title'
           span(class='mainpage')  mainpage?
     else
       form(method="get")
