--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 
 .search {
-  width: 20%;
-  margin: auto;
+  width: 30%;
+  margin: 0 auto;
   margin-top: 20%;
   display: block;
   opacity: 0.8;
@@ -10,7 +10,7 @@
 }
 
 footer {
-  width: 20%;
+  width: 30%;
   display: block;
   margin: auto;
   margin-top: 2%;
