--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,15 @@
   border-radius: 0;
 }
 
+.data, .error, .return {
+  width: 30%;
+  margin: 0 auto;
+  margin-top: 2%;
+  display: block;
+  opacity: 0.8;
+  text-align: center;
+}
+
 footer {
   width: 30%;
   display: block;
