🚓🚃 Checkpoint ./views/index.pug:365129/177 ./public/style.css:365129/129

--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,14 @@
   text-align: center;
 }
 
+.continue, .mainpage{
+  font-weight: bold;
+}
+
+.continue:hover, .mainpage:hover{
+  text-decoration: underline;
+}
+
 footer {
   width: 30%;
   display: block;
