🐡💉 Checkpoint ./views/index.pug:365129/20 ./public/style.css:365129/249 ./controllers/ajax.js:365129/2 ./models/parser.js:365129/38

--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,14 @@
 
 .continue:hover, .mainpage:hover{
   text-decoration: underline;
+  cursor: pointer;
+}
+
+.info{
+  width: 30%;
+  margin: 0 auto;
+  display: block;
+  opacity: 0.8;
 }
 
 footer {
