🌊👾 Checkpoint ./views/index.pug:365129/4 ./models/parser.js:365129/43

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ html
   script(src="/controllers/ajax.js", type="text/javascript")
   body
     main
-    div.result
+    div.result.row
     if data.isSearched
       if data.content
         if data.title != 'Error'
