--- a/public/style.css
+++ b/public/style.css
@@ -19,16 +19,16 @@
   text-align: center;
 }
 
-.continue, .mainpage{
+.continue, .mainpage {
   font-weight: bold;
 }
 
-.continue:hover, .mainpage:hover{
+.continue:hover, .mainpage:hover {
   text-decoration: underline;
   cursor: pointer;
 }
 
-.result{
+.result {
   width: 50%;
   margin: 0 auto;
   display: block;
@@ -40,22 +40,24 @@ footer {
   display: block;
   margin: 0 auto;
   margin-top: 2%;
+  opacity: 0.8;
   font-size: 0.8em;
   text-align: center;
   border-top: 1px solid lightgrey;
 }
 
-footer a{
+footer a {
   color: black;
+  opacity: 0.8;
   text-decoration: none;
 }
 
-footer a:hover{
+footer a:hover {
   color: black;
   text-decoration: underline;
 }
 
-footer a:active{
+footer a:active {
   color: black;
   text-decoration: underline;
 }
