--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ doctype html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
 html
   head
     title= data.title 
-  link(id="favicon", rel="icon", href="https://glitch.com/edit/favicon-app.ico", type="image/x-icon")
+  link(id="favicon", rel="icon", href="https://cdn.glitch.com/aa1f58fa-6cac-4f01-9f72-fdf6fa60b0a2%2Ffav.ico?1532636260432", type="image/x-icon")
   meta(charset="utf-8")
   meta(name="viewport", content="width=device-width, initial-scale=1")
   link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
