--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,7 @@ html
   script(src="/controllers/ajax.js", type="text/javascript")
   body
     main
+    div.wait.row
     div.result.row
     if data.isSearched
       if data.content
