--- a/views/index.pug
+++ b/views/index.pug
@@ -11,8 +11,8 @@ html
   script(src="/controllers/ajax.js", type="text/javascript")
   body
     main
-    div.wait.row
     div.result.row
+    div.wait.row.text-center='Wait'
     if data.isSearched
       if data.content
         if data.title != 'Error'
